k8s/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.docker.project: admin
  name: admin
  namespace: algc
spec:
  replicas: 1
  selector:
    matchLabels:
      com.docker.project: admin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        com.docker.project: admin
    spec:
      containers:
        - image: algorithmcompare_admin:latest
          name: admin
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
              protocol: TCP
          resources: {}
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            failureThreshold: 30
            periodSeconds: 10
      restartPolicy: Always
status: {}
