k8s/core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: core
  name: core
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: core
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/algorithm-compare-network: "true"
        io.kompose.service: core
    spec:
      containers:
        - env:
            - name: CORS_ALLOWED_ORIGINS
              value: http://localhost:8080
            - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
              value: http://eureka:8083/eureka/
            - name: LOGGING_LEVEL_COM_REDDEV_ALGORITHMCOMPARE
              value: INFO
            - name: PLUGIN_PATH
              value: /core/plugins-zipped
            - name: SPRING_BOOT_ADMIN_CLIENT_URL
              value: http://admin-monitor:8082
            - name: SPRING_DATA_MONGODB_HOST
              value: mongodb
            - name: SPRING_DATA_REDIS_HOST
              value: redis
          image: algorithmcompare_core:latest
          imagePullPolicy: Never
          livenessProbe:
            exec:
              command:
                - curl -f http://core:8084/actuator/health || exit 1
            failureThreshold: 20
            periodSeconds: 3
            timeoutSeconds: 3
          name: core
          ports:
            - containerPort: 8084
          resources: {}
      restartPolicy: Always
status: {}
