k8s/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/algorithm-compare-network: "true"
        io.kompose.service: eureka
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
              value: http://eureka:8083/eureka/
            - name: SPRING_BOOT_ADMIN_CLIENT_URL
              value: http://admin-monitor:8082
          image: minikube/algorithmcompare_eureka:latest
          livenessProbe:
            exec:
              command:
                - curl -f http://eureka:8083/actuator/health || exit 1
            failureThreshold: 20
            periodSeconds: 3
            timeoutSeconds: 3
          name: eureka
          ports:
            - containerPort: 8083
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}
