k8s/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.docker.project: fe
  name: fe
  namespace: algc
spec:
  replicas: 1
  selector:
    matchLabels:
      com.docker.project: fe
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        com.docker.project: fe
    spec:
      containers:
        - image: algorithmcompare_fe:latest
          name: fe
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
