k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.docker.project: gateway
  name: gateway
  namespace: algc
spec:
  replicas: 1
  selector:
    matchLabels:
      com.docker.project: gateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        com.docker.project: gateway
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
              value: http://eureka.algc.svc.cluster.local:8083/eureka/
            - name: SPRING_BOOT_ADMIN_CLIENT_URL
              value: http://admin.algc.svc.cluster.local:8082
          image: algorithmcompare_gateway:latest
          imagePullPolicy: Never
          name: gateway
          ports:
            - containerPort: 8081
              protocol: TCP
          resources: {}
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            failureThreshold: 30
            periodSeconds: 10
      restartPolicy: Always
status: {}
