k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/algorithm-compare-network: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - image: mongo:6.0.8
          name: algorithm-compare-mongodb
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
