k8s/redis-commander-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.docker.project: redis-commander
  name: redis-commander
  namespace: algc
spec:
  replicas: 1
  selector:
    matchLabels:
      com.docker.project: redis-commander
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        com.docker.project: redis-commander
    spec:
      containers:
        - env:
            - name: REDIS_HOSTS
              value: local:redis:6379
          image: rediscommander/redis-commander:latest
          name: redis-commander
          ports:
            - containerPort: 8079
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
