k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: algc
spec:
  ports:
    - name: 8082-tcp
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    com.docker.project: admin
status:
  loadBalancer: {}
