k8s/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe
  namespace: algc
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    com.docker.project: fe
status:
  loadBalancer: {}
