k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: algc
spec:
  ports:
    - name: 8081-tcp
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    com.docker.project: gateway
status:
  loadBalancer: {}
