k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: algc
spec:
  ports:
    - name: 27017-tcp
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    com.docker.project: mongodb
status:
  loadBalancer: {}
