k8s/redis-commander-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  namespace: algc
spec:
  ports:
    - name: 8079-tcp
      port: 8079
      protocol: TCP
      targetPort: 8079
  selector:
    com.docker.project: redis-commander
status:
  loadBalancer: {}
