k8s/algorithm-compare-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: algc-ingress
  namespace: algc
  labels:
    com.docker.project: algc-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
      - host: localhost
        http:
          paths:
            - path: /eureka
              pathType: Prefix
              backend:
                service:
                  name: eureka
                  port:
                    number: 8083
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: gateway
                  port:
                    number: 8081
